--- a/src/index.htm
+++ b/src/index.htm
@@ -26,6 +26,7 @@
       <option>reverse</option>
       <option>meme</option>
       <option>toCharNumbers</option>
+      <option>perm enc/dec</option>
     </select>
     <button class="btn btn-primary" v-on:click="manipulateString()">Do it!</button>
     <div>{{ output }}</div>
